--- a/DeepIE3D_Frontend/pubspec.yaml
+++ b/DeepIE3D_Frontend/pubspec.yaml
@@ -4,15 +4,15 @@ version: 1.0.0
 author: Adrian Westh <mail@adrianwesth.dk> & Simon Krabbe Munck <simonkmunck@gmail.com>
 
 environment:
-  sdk: '>=2.2.0'
+  sdk: '>=2.6.0'
 
 dependencies:
-  angular: ^5.2.0
-  angular_components: ^0.12.0
+  angular: ^5.3.1
+  angular_components: ^0.13.0+1
   js: ^0.6.1+1
-  tuple: ^1.0.2
+  tuple: ^1.0.3
 
 dev_dependencies:
-  build_runner: ^1.3.0
-  build_web_compilers: ^1.2.0
-  pedantic: ^1.5.0
+  build_runner: ^1.7.2
+  build_web_compilers: ^2.7.1
+  pedantic: ^1.8.0+1
